--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>LaLaLaProject</title>
     <base href="./">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="footer, basic, centered, links" />
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script type='text/javascript' src="js/jquery-1.11.1.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow|Pacifico" rel="stylesheet"> 
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+    <link href="css/newstyle.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="home.component.css">
+    <link href="css/megamenu.css" rel="stylesheet" type="text/css" media="all" />
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
@@ -22,16 +31,12 @@
     <my-app>Loading AppComponent content here ...</my-app>
 
       <script src="js/jquery.js"></script>
-	    <script src="js/bootstrap.min.js"></script>
-	    <script src="js/jquery.scrollUp.min.js"></script>
-	    <script src="js/price-range.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script src="js/jquery.scrollUp.min.js"></script>
+      <script src="js/price-range.js"></script>
       <script src="js/jquery.prettyPhoto.js"></script>
       <script src="js/main.js"></script>
-    <footer>
-      <br><br>
-      <div class="container col-sm-12">
-        <p style="text-align: center; border-top: 3}px solid">Created by: Anggiend with love in ciwaruga</p>
-      </div>
-    </footer>
+  
   </body>
+
 </html>
